# Piper-SmolVla

./: .gitignore  README.md  pyproject.toml  sitecustomize.py
docs/: PIPER_SMOLVLA_ADAPTER_FRAMEWORK.md  PIPER_SMOLVLA_PHASE0_REPORT.md  PIPER_SMOLVLA_REFERENCE_AUDIT.md  README.md
sample_data/: README.md
scripts/: _bootstrap.py  _sanity_check_demos.py  audit_prompt_plumbing.py  check_collection_readiness.py  check_existing_data_fullflow.py  check_piper_readonly.py  check_single_cube_position_group.py  check_xvla_lerobot_dataset.py  collect.sh  collect_demo_showcase.sh  collect_scene.sh  collect_smolvla_dataset.py  debug_camera_flicker.py  debug_cameras.py  debug_realsense.py  deploy_smolvla.py  eval_trainset.py  infer_smolvla_policy.py  merge_lerobot_datasets.py  prepare_single_cube_line4pos_40.py  prepare_two_obj_green_only_lr.py  prepare_two_obj_language_48.py  preview_cameras.py  q_smolvla_train.py  q_smolvla_train_server.py  record_left_right_paper_dataset.py  record_two_object_language_random.py  replay_demo.py  reset_to_start.py  run_smolvla_deploy.sh  run_train_4090_smolvla_twoobj200.sh  shadow_test.py  smoke_test_dataset_for_s_and_x.py  test_smolvla_inference.py  train_smolvla_full.py  train_smolvla_smoke.py  train_smolvla_utils.py  train_xvla.py
tests/: test_adapter.py  test_camera_utils.py  test_cli_entrypoints.py  test_collection.py  test_dataset_compat.py  test_deployment.py  test_features.py  test_hardware.py  test_piper_io.py  test_policy_io.py  test_real_sources.py  test_rollout_preview.py  test_rollout_runtime.py  test_schema.py  test_train_xvla.py  (+3 more)
(+43 files in other folders)
